styles.css
@import url("base.css");

.container {
  max-width: 75%;
  margin: 0 auto;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 100px 0 60px 0;
}

header ul {
  display: flex;
  gap: 20px;
  & li {
    color: var(--darkgrayishblue);
    & a {
      transition: all 0.2s ease;
      text-decoration: none;
      color: inherit;
    }
    & a:hover {
      color: var(--secondary);
    }
  }
}

.grid-col-span-2 {
  grid-column: span 2;
}

.grid-row-span-2 {
  grid-row: span 2;
}

main {
  display: grid;
  gap: 2em;
  grid-template-columns: repeat(3, 1fr);
  margin-bottom: 5rem;
}

.headline-title h1 {
  padding-right: 1em;
  font-weight: 800;
  font-size: 3.1rem;
  letter-spacing: 0.15rem;
  line-height: 3.2rem;
}

.headline p {
  margin-bottom: 2rem;
}

.headline a button {
  border: none;
  background-color: var(--secondary);
  padding: 0.9rem 1rem;
  width: 50%;
  text-transform: uppercase;
  color: var(--offwhite);
  letter-spacing: 0.25rem;
  cursor: pointer;
  transition: all 0.2s ease;
  &:hover {
    background-color: var(--verydarkblue);
  }
}

aside {
  background-color: var(--verydarkblue);
  padding: 1.5rem 1.5rem 0 1.5rem;
  & li {
    border-bottom: 1px solid var(--darkgrayishblue);
    margin-block: 2em;
    &:last-of-type {
      border-bottom: none;
    }
  }
  & h1 {
    font-weight: 700;
    font-size: 2.25em;
    color: var(--primary);
  }
  & h3 {
    margin-bottom: 1rem;
    color: var(--offwhite);
    transition: all 0.2s ease;
    &:hover {
      color: var(--primary);
    }
  }

  & a {
    text-decoration: none;
  }

  & p {
    margin-bottom: 1.5rem;
    color: var(--grayishblue);
  }
}

.article {
  margin-top: 2rem;
  display: flex;
  gap: 1.3rem;

  & img {
    height: 7.5rem;
  }

  & div {
    display: grid;
    & h2 {
      font-weight: 700;
      font-size: 2rem;
      color: var(--grayishblue);
    }
    & h3 {
      font-weight: 800;
      font-size: 1rem;
      letter-spacing: 0.04rem;
    }
  }
}

